# git-annex-blob-conversion

./: .gitignore  CMakeLists.txt  README.md  main.cpp  sha1.cpp  sha1.h
